--- a/AroundTheMetro/Info.plist
+++ b/AroundTheMetro/Info.plist
@@ -25,6 +25,7 @@
 			<array>
 				<string>com.googleusercontent.apps.999254037272-kgf3d76b6us3gbgiko8e0rnj6bfa7krt</string>
 				<string>com.AugmentedDiscovery.AroundTheMetro</string>
+				<string>aroundthemetroapp</string>
 				<string>fb214940625744205</string>
 				<string>twitterkit-hjNxRNRcsyrcOfHIuCOOCPHuN</string>
 			</array>
