--- a/AroundTheMetro/Controllers/LocateMetro/Cities/Paris.plist
+++ b/AroundTheMetro/Controllers/LocateMetro/Cities/Paris.plist
@@ -2526,9 +2526,9 @@
 		</dict>
 		<dict>
 			<key>latitude</key>
-			<real>45.748275300000003</real>
+			<real>48.5259</real>
 			<key>longitude</key>
-			<real>4.8256646999999999</real>
+			<real>2.2626</real>
 			<key>name</key>
 			<string>"Place Carnot"</string>
 		</dict>
